# msds-poc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
msds_poc/: __init__.py  main.py  utils.py
scripts/: smoke_test.sh
